# grafana-cloud-demo-store

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  traffic.py
app/: demo_control.py  main.py  telemetry.py  ui.py
dashboard/: storefront-overview.json
docs/: technical-walkthrough.docx  technical-walkthrough.md
